# crablet

./: .dockerignore  .env.examples  .git_commit_msg_staged.txt  .git_commit_msg_unstaged.txt  .gitignore  .pre-commit-config.yaml  COVERAGE_IMPROVEMENT_PLAN.md  CRABLET_DEEP_ANALYSIS_V2.md  Cargo.toml  Dockerfile  Justfile  LICENSE  OVERVIEW.md  PRODUCTION.md  README.md  README_zh.md  analysis_plan_v2.md  commit-plan.md  crablet_agent_core_analysis_2026_07_15.md  crablet_optimization_plan.md  crablet_rust_backend_analysis_2026-07-14.md  crawl_dataset.py  debug.sh  deny.toml  docker-compose.yml  final_verification.sh  fix_cargo_lock.sh  install.sh  one-click.sh  plan.md  settings.sh  start.sh  status.sh  test_clawhub_skills.py  uninstall.sh  优化_CI_CD.md  优化_前端.md  优化_智能体方案.md  优化_构建脚本.md  优化_桌面打包.md  (+6 more)
benchmark/: Cargo.toml
benchmark/src/: lib.rs  main.rs  metrics.rs  reporter.rs  scenarios.rs
crablet/: .env  .gitignore  AGENTS.md  COMMIT_MSG.txt  Cargo.toml  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  USER.md  check_file.py  crablet.db  fix_file.py  schema.sql  test.sh  tests_config.toml
crablet/config/: config.toml
crablet/crablet/: crablet.db-shm
crablet/docs/: plan.md
crablet/mcp_servers/: math_server.py  mcp_test_server.py
crablet/migrations/: 20240101000000_initial_schema.sql  20240315000000_initial.sql  20240316000000_auth.sql  20240317000000_audit.sql  20240318000000_swarm.sql  20260513000000_swarm_execution_state.sql  20260514000000_swarm_event_log_indexes.sql  20260722000000_runtime_event_envelope.sql
crablet/skills/create_skills/: SKILL.md
crablet/skills/find_skills/: SKILL.md
crablet/skills/proactive_agent/: SKILL.md
crablet/skills/safe_run/: SKILL.md
crablet/src/: async_utils.rs  background.rs  config.rs  constants.rs  error.rs  events.rs  health.rs  heartbeat.rs  lib.rs  main.rs  migrations_resolver.rs  optimized_system.rs  plugins.rs  sqlx_compat.rs  telemetry.rs  testing.rs  types.rs
crablet/src/agent/: adaptive_harness.rs  aggregator.rs  analyst.rs  analyst_v2.rs  capability.rs  coder.rs  collaborative_solver.rs  consensus.rs  coordinator.rs  debate.rs  distributed_enhanced.rs  distributed_harness.rs  dynamic_topology.rs  factory.rs  generic.rs  handoff.rs  harness.rs  harness_agent.rs  harness_fusion.rs  harness_manager.rs  hitl.rs  hooks.rs  memory_pipeline.rs  metrics.rs  mod.rs  multi_role.rs  path_explorer.rs  planning.rs  priority_queue.rs  researcher.rs  reviewer.rs  rl_optimizer.rs  security.rs  self_healing_agent.rs  smart_allocator.rs  step_executor.rs  swarm.rs  swarm_dynamic_timeout.rs  task.rs  tool_executor.rs  (+4 more)
crablet/src/audit/: event_sourcing.rs  mod.rs
crablet/src/auth/: context.rs  handlers.rs  middleware.rs  mod.rs  oidc.rs
crablet/src/auto_working/: mod.rs  queue.rs  scheduler.rs  types.rs  worker.rs
crablet/src/background/: monitor.rs
crablet/src/canvas/: mod.rs  types.rs
crablet/src/channels/: cli_legacy.rs  discord.rs  manager.rs  mod.rs  web.rs
crablet/src/cognitive/: adaptive_router.rs  answer_validator.rs  audit_log.rs  classifier.rs  context_handler.rs  emotional_memory.rs  enhanced_react.rs  feedback_learning.rs  fusion_router.rs  fusion_router_test.rs  intent_classifier.rs  intent_tracker.rs  knowledge_graph.rs  lane.rs  logical_expression.rs  mcts_tot.rs  memory_decay.rs  meta_controller.rs  meta_router.rs  middleware.rs  mod.rs  multi_agent.rs  online_learning.rs  pattern_matcher.rs  react.rs  react_guard.rs  react_observable.rs  rl_optimizer.rs  rl_router.rs  router.rs  routing.rs  self_cot_verification.rs  speculative_router.rs  strategy_recommender.rs  streaming_pipeline.rs  system1.rs  system1_dynamic.rs  system1_enhanced.rs  system2.rs  system3.rs  (+4 more)
crablet/src/connectors/: calendar.rs  database.rs  email.rs  filesystem.rs  mod.rs  webhook.rs
crablet/src/evaluation/: README.md  ab_testing.rs  agent_delivery_pipeline.py  agent_evaluator.rs  delivery_intent_gate.py  intent_delivery_regression.py  manifest.json  mod.rs  quality_judge.py  test_intent_delivery_regression.py  test_quality_judge.py
crablet/src/gateway/: admin_handlers.rs  audit_handlers.rs  auth.rs  canvas.rs  canvas_manager.rs  chat_enhancement_handlers.rs  chat_handlers.rs  dashboard_handlers.rs  events.rs  feishu_handler.rs  handlers_shared.rs  harness_handlers.rs  knowledge_handlers.rs  mod.rs  observability_handlers.rs  ratelimit.rs  routing_handlers.rs  rpc.rs  rpc_handlers.rs  server.rs  session.rs  session_handlers.rs  skill_handlers.rs  swarm_handlers.rs  types.rs  web_handlers.rs  websocket.rs  workflow_handlers.rs
crablet/src/gui/: mod.rs
crablet/src/heartbeat/: mod.rs
crablet/src/knowledge/: causal_reasoning.rs  chunking.rs  embedder.rs  enhanced_rag.rs  extractor.rs  graph.rs  graph_rag.rs  hnsw_index.rs  ingestion.rs  mod.rs  multimodal.rs  pdf.rs  query_analyzer.rs  reranking.rs  smart_cache.rs  (+1 more)
crablet/templates/: index.html  message_assistant.html  message_user.html
crablet/tests/: coverage_test.rs  dashscope_test.rs  demo_browser.rs  demo_debate.rs  demo_rag.rs  demo_review.rs  demo_voting.rs  distributed_harness_test.rs  e2e_auth_audit.rs  e2e_full.rs  ecosystem_test.rs  framework_verify.rs  fusion_integration_test.rs  gateway_entrypoint_test.rs  harness_agent_integration_test.rs  harness_integration_test.rs  hooks_integration_test.rs  integration_meta_cognitive_test.rs  integration_test.rs  memory_manager_test.rs  memory_test.rs  meta_simple_test.rs  middleware_test.rs  ollama_repro.rs  react_chain_test.rs  react_test.rs  real_integration_test.rs  research_verify.rs  router_test.rs  rpa_desktop_test.rs  safety_test.rs  system1_internal_test.rs  system1_verify.rs  system2_test.rs  test_agent_mcp.rs  test_openclaw_bash.rs  test_skill_weather.rs  test_skills_agent.rs  tool_executor_integration_test.rs  vector_store_integration_test.rs  (+1 more)
desktop/: Cargo.toml  build-desktop.ps1  build-desktop.sh  notarize-dmg.sh  package-lock.json  package.json  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/ui/: index.html  splash.html
(+816 files in other folders)
