[package]
name = "crablet-benchmark"
version = "0.1.0"
edition = "2021"
description = "Crablet Performance Benchmark Suite - Proves Rust performance advantage over OpenClaw"
authors = ["Crablet Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time measurement
instant = "0.1"

# System info
sys-info = "0.9"

# Async trait
async-trait = "0.1"

# Statistics
statrs = "0.16"

# Random for test data
rand = "0.8"

# Thread pool
num_cpus = "1.76"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "crablet_bench"
path = "src/main.rs"

[lib]
name = "crablet_benchmark"
path = "src/lib.rs"