[package]
name = "crablet"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
inference = ["dep:ort"]
browser = ["dep:headless_chrome"]
discord = ["dep:serenity"]
full = ["knowledge", "audio", "vision", "web", "scripting", "telemetry", "sandbox", "telegram", "browser", "discord"]
telegram = ["dep:teloxide"]
knowledge = ["dep:fastembed", "dep:pdf-extract", "dep:neo4rs", "qdrant-support"]
# knowledge = ["dep:fastembed", "dep:pdf-extract", "dep:neo4rs"] # Qdrant disabled for now due to dep issues
audio = ["dep:rubato", "dep:dasp", "dep:hound"]
web = ["dep:axum", "dep:tower-http", "dep:askama", "dep:askama_axum"]
scripting = ["dep:mlua"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
sandbox = ["dep:bollard"]
vision = [] # Placeholder for now as image crate is not listed explicitly but might be transitive or used via simple file ops
qdrant-support = ["dep:qdrant-client"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4.5", features = ["derive"] }
teloxide = { version = "0.13", features = ["macros"], optional = true }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dotenvy = "0.15"
async-trait = "0.1.89"
serde_json = "1.0.149"
mlua = { version = "0.11.6", features = ["lua54", "async", "serialize", "macros", "vendored"], optional = true }
pdf-extract = { version = "0.10.0", optional = true }
base64 = "0.22.1"
fastembed = { version = "5.9.0", optional = true }
html2text = "0.12"
serde_yaml = "0.9.34"
regex = "1.12.3"
urlencoding = "2.1.3"
html-escape = "0.2.13"
directories = "6.0.0"
toml = "1.0.2"
indicatif = "0.18.4"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"], optional = true }
askama = { version = "0.15.4", optional = true }
notify = "8.2.0"
lru = "0.16.3"
keyring = "3.6.3"
lazy_static = "1.5.0"
futures = "0.3.32"
dashmap = "6.1.0"
hmac = "0.12.1"
sha2 = "0.10.9"
neo4rs = { version = "0.8.0", optional = true }
bollard = { version = "0.20.1", optional = true }
askama_axum = { version = "0.4.0", optional = true }
hound = { version = "3.5.1", optional = true }
rubato = { version = "1.0.1", optional = true }
dasp = { version = "0.11.0", optional = true }
gray_matter = "0.3.2"
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
shlex = "1.3.0"
qdrant-client = { version = "1.3.0", optional = true }
image = { version = "0.25.5", optional = true }
strsim = "0.10.0" # For Levenshtein distance
ort = { version = "2.0.0-rc.9", optional = true } # Modern ONNX Runtime wrapper (replaces onnxruntime)
headless_chrome = { version = "1.0", optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }
colored = "3.1.1"
scraper = "0.25.0"
